tests/snapshots/tests__CT_small_output.snap
---
source: tests/tests.rs
expression: content
---
FileName,PatientName,PatientID,PixelSpacing,ImagerPixelSpacing
CT_small.dcm,CompressedSamples^CT1,1CT1,0.661468\0.661468,
