tests/snapshots/tests__liver_output.snap
---
source: tests/tests.rs
expression: content
---
FileName,PatientName,PatientID,PixelSpacing,ImagerPixelSpacing
liver.dcm,JANCT000,99000,,
