tests/snapshots/tests__mr_small_specific_tags.snap
---
source: tests/tests.rs
expression: content
---
FileName,Modality,StudyDate,SeriesDescription
MR_small.dcm,MR,20040826,
