tests/snapshots/tests__multiple_files_output.snap
---
source: tests/tests.rs
expression: content
---
FileName,Modality,PatientID,PixelSpacing,ImagerPixelSpacing
liver.dcm,SEG,99000,,
CT_small.dcm,CT,1CT1,0.661468\0.661468,
